# Panorama

./: README.md
Assignement1/: .ninja_deps  .ninja_log  CMakeCache.txt  Panorama  build.ninja  cmake_install.cmake  qtcsettings.cmake
Assignement1/.qtc_clangd/: compile_commands.json
Assignement1/build-Panorama_Initial-Desktop_Qt_5_15_2_clang_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  Panorama  build.ninja  cmake_install.cmake
Assignement1/build-Panorama_Initial-Desktop_Qt_5_15_2_clang_64bit-Debug/.qtc_clangd/: compile_commands.json
Compiling/: .ninja_deps  .ninja_log  CMakeCache.txt  Panorama  build.ninja  cmake_install.cmake  qtcsettings.cmake
Compiling/.qtc_clangd/: compile_commands.json
Imagine++-4.3.2-Darwin-i386/CMake/: ImagineConfig.cmake
Imagine++-4.3.2-Darwin-i386/Panorama_Initial/: Panorama.cpp
Imagine++-4.3.2-Darwin-i386/doc/html/: _algos_8h_source.html  _analyze_8h_source.html  _analyze_header_8h_source.html  _array_8h_source.html  _base_8h_source.html  _border_8h_source.html  _buffer_8h_source.html  _color_8h_source.html  _common_2src_2_imagine_2_common_2_i_o_8h_source.html  _common_2test_2test_8cpp-example.html  _common_8h_source.html  _config_graphics_8h_source.html  _coords_8h_source.html  _draw_8h_source.html  _events_8h_source.html  _f_array_8h_source.html  _f_matrix_8h_source.html  _f_vector_8h_source.html  _graphics_2test_2example_8cpp-example.html  (+183 more)
Imagine++-4.3.2-Darwin-i386/test/: CMakeLists.txt
Imagine++-4.3.2-Darwin-i386/test/LinAlg/: CMakeLists.txt  testLS.cpp
Panorama_Initial/: CMakeLists.txt  Panorama.cpp
(+367 files in other folders)
